--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CaptureTheTresure\CaptureTheTresure.csproj" />
+    <ProjectReference Include="..\CaptureTheTresure\CaptureTheTreasure.csproj" />
   </ItemGroup>
 
 </Project>
